// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`USWDS Table component matches snapshot 1`] = `
<DocumentFragment>
  <table
    class="usa-table grid-col-12 usa-table--borderless"
  />
</DocumentFragment>
`;

exports[`USWDS TableData component matches snapshot 1`] = `
<DocumentFragment>
  <table
    class="usa-table grid-col-12 usa-table--borderless"
  >
    <tbody>
      <tr>
        <td
          style="background-color: rgb(240, 240, 240); border-color: white;"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
